--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.DevDash" parent="android:Theme.Material.Light.NoActionBar" >
-        <item name="android:windowIsTranslucent">true</item>
+    <style name="Theme.DevDash" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.DevDash.SplashScreen" parent="Theme.SplashScreen">
+        <item name="android:windowBackground">@drawable/splash_bg_gradient</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_logo_anim</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="postSplashScreenTheme">@style/Theme.DevDash</item>
     </style>
+
 </resources>
