--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,9 +4,7 @@
     <style name="Theme.DevDash" parent="android:Theme.Material.Light.NoActionBar" />
 
     <style name="Theme.DevDash.SplashScreen" parent="Theme.SplashScreen">
-        <item name="android:windowBackground">@drawable/splash_bg_gradient</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_logo_anim</item>
-        <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="android:windowBackground">@drawable/splash_screen</item>
         <item name="postSplashScreenTheme">@style/Theme.DevDash</item>
     </style>
 
