--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="146"
+    android:viewportHeight="62">
+    <group
+        android:scaleX="0.57835054"
+        android:scaleY="0.24560091"
+        android:translateX="31.171335"
+        android:translateY="23.220364">
+        <path
+            android:fillColor="#ffffff"
+            android:pathData="M26,16l-18.5,10.8 -0.3,5.3 -0.2,5.4 19,10.8 19,10.8 13.2,-7.7c7.3,-4.2 13.4,-7.8 13.6,-7.9 0.2,-0.1 -1.6,-1.4 -3.9,-2.7l-4.2,-2.5 -8.8,5c-8.2,4.7 -8.9,5.4 -9.8,9.1l-0.9,4.1 -0.1,-4 -0.1,-4 -12.5,-7.3c-6.9,-4.1 -12.5,-7.6 -12.5,-7.9 0,-0.3 1.9,0.6 4.3,2 2.3,1.3 8.1,4.6 12.9,7.2l8.8,4.7 6.7,-3.8c11.4,-6.3 11.2,-5.9 6.4,-8.4l-4.1,-2.1 -4.5,2.7 -4.5,2.6 -9.5,-5.2c-5.2,-2.8 -9.5,-5.5 -9.5,-6 0,-1.5 18,-11.2 19.8,-10.8 0.9,0.3 13.6,7.4 28.2,15.8l26.5,15.3 9,-4.8c10.7,-5.7 10.6,-5 -0.2,1.4 -7.2,4.4 -7.8,5 -8.4,8.7l-0.6,3.9 -0.2,-4 -0.2,-4 -26.6,-15.2c-19,-10.9 -27,-14.9 -27.9,-14.2 -0.8,0.7 -1.3,0.6 -1.6,-0.1 -0.4,-1.2 -14.8,6.5 -14.8,7.9 0,0.4 1.6,1.5 3.6,2.4 3.5,1.7 3.7,1.7 8.1,-0.8l4.4,-2.6 27.8,16.5 27.7,16.6 18.7,-10.7 18.7,-10.7 0,-5.6 0,-5.5 -17.8,-10.2c-9.8,-5.6 -18.3,-10.3 -18.9,-10.5 -1.1,-0.3 -27.3,14.3 -27.3,15.3 0,0.3 1.9,1.4 4.3,2.6l4.2,2.1 9.1,-5.3 9.1,-5.2 9.6,5.4c5.3,3 9.5,5.9 9.2,6.3 -0.3,0.4 -4.5,3.1 -9.5,5.9 -8.6,4.9 -9.2,5.1 -11.8,3.7 -1.5,-0.8 -14.1,-8.2 -28,-16.5 -14,-8.3 -25.4,-15.1 -25.5,-15 -0.1,-0 -8.5,4.9 -18.7,10.9zM123,35.5c0,0.2 -1,0.9 -2.2,1.5 -2.2,1.1 -2.2,1 -0.4,-0.4 2.1,-1.7 2.6,-1.9 2.6,-1.1z"
+            android:strokeColor="#00000000" />
+        <path
+            android:fillColor="#ffffff"
+            android:pathData="M91.2,22.4l-7.4,4.3 3.8,2.3 3.7,2.3 4.8,-2.7 4.8,-2.7 4.2,2.6c3.6,2.3 4.5,2.5 7,1.5 5.8,-2.5 5.5,-3.5 -2.4,-7.9 -4.1,-2.3 -7.7,-4.1 -8,-4.1 -0.3,-0 -0.8,1.5 -1,3.2l-0.4,3.3 -0.1,-3.3c-0.1,-1.7 -0.5,-3.2 -0.9,-3.2 -0.5,-0 -4.1,2 -8.1,4.4z"
+            android:strokeColor="#00000000" />
+    </group>
 </vector>
