--- a/app/src/main/res/drawable/progress_ic.xml
+++ b/app/src/main/res/drawable/progress_ic.xml
@@ -5,7 +5,9 @@
     android:viewportHeight="24">
     <path
         android:fillColor="#00000000"
-        android:pathData="M12,12m-9,0a9,9 0,1 1,18 0a9,9 0,1 1,-18 0"
+        android:pathData="M22,12H18L15,21L9,3L6,12H2"
         android:strokeWidth="2"
-        android:strokeColor="#908F8F" />
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
 </vector>
