--- a/app/src/main/res/drawable/sesrch_ic.xml
+++ b/app/src/main/res/drawable/sesrch_ic.xml
@@ -5,14 +5,9 @@
     android:viewportHeight="24">
     <path
         android:fillColor="#00000000"
-        android:pathData="M16,8L10.5,16L8,12.364"
+        android:pathData="M21,21L16.65,16.65M19,11C19,15.418 15.418,19 11,19C6.582,19 3,15.418 3,11C3,6.582 6.582,3 11,3C15.418,3 19,6.582 19,11Z"
         android:strokeWidth="2"
-        android:strokeColor="#1E8024"
+        android:strokeColor="#ffffff"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M12,12m-9,0a9,9 0,1 1,18 0a9,9 0,1 1,-18 0"
-        android:strokeWidth="2"
-        android:strokeColor="#1E8024" />
 </vector>
