solve conflicts between main and navigation

--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <style name="Theme.DevDash.SplashScreen" parent="Theme.SplashScreen">
-        <item name="android:windowBackground">@drawable/splash_bg_gradient</item>
+        <item name="android:windowSplashScreenBackground">@color/black</item>
         <item name="android:windowSplashScreenAnimatedIcon">@drawable/dev_dash_logo_anim</item>
-        <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="android:windowSplashScreenAnimationDuration">1000</item>
         <item name="postSplashScreenTheme">@style/Theme.DevDash</item>
     </style>
 </resources>
