--- a/app/src/main/res/animator/logo_animation.xml
+++ b/app/src/main/res/animator/logo_animation.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-    <objectAnimator
-        android:duration="1000"
-        android:interpolator="@android:anim/decelerate_interpolator"
-        android:propertyName="scaleX"
-        android:valueFrom="0.5"
-        android:valueTo="1"
-        android:valueType="floatType" />
-
-    <objectAnimator
-        android:duration="1000"
-        android:interpolator="@android:anim/anticipate_overshoot_interpolator"
-        android:propertyName="scaleY"
-        android:valueFrom="0.5"
-        android:valueTo="1"
-        android:valueType="floatType" />
-</set>
+<objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="1000"
+    android:interpolator="@android:anim/anticipate_overshoot_interpolator"
+    android:valueFrom=".5"
+    android:valueTo=".8"
+    android:valueType="floatType">
+    <propertyValuesHolder android:propertyName="scaleX" />
+    <propertyValuesHolder android:propertyName="scaleY" />
+</objectAnimator>
