--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -3,7 +3,7 @@
 
     <style name="Theme.DevDash.SplashScreen" parent="Theme.SplashScreen">
         <item name="android:windowBackground">@color/ic_launcher_background</item>
-        <item name="android:windowSplashScreenAnimatedIcon">@drawable/dev_dash_logo_anim</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/splash_screen</item>
         <item name="windowSplashScreenAnimationDuration">1000</item>
         <item name="postSplashScreenTheme">@style/Theme.DevDash</item>
     </style>
